# Proyecto_Embebidos

./: .gitignore  CMakeLists.txt  INSTRUCCIONES_PROFESOR.md  LICENSE  README.md  RESUMEN_PROYECTO.md  toolchain-riscv64.cmake
deployment/: S06maixapp  install.sh
docs/: FLUJO_EJECUCION.md  INSTRUCCIONES_PROFESOR.md  JUSTIFICACION_TECNICA.md  RESUMEN_PROYECTO.md
docs/diagramas/: DIAGRAMAS_BLOQUES.md
python/: detector_final_hybrid.py
python/drowsiness_detector/: main.py  main_hybrid.py  main_old.py
python/menu_selector/: main.py
src/: drowsiness_c.c  drowsiness_hybrid.c  drowsiness_hybrid_final.c  drowsiness_retinaface.c  drowsiness_static.c  drowsiness_wrapper.c  hardware_wrapper.c  ion_stub.c
